feat: complete crud on players
- feat: migrate openapi to webrpc
- feat(web): Checkbox ui
